// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Bifrost Kusama Accounts > \`burn\` > burning funds from account works > events when Alice self-burns funds 1`] = `
[
  {
    "data": {
      "amount": 5000000000000,
      "who": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "Burned",
    "section": "balances",
  },
]
`;

exports[`Bifrost Kusama Accounts > \`force_adjust_total_issuance\` > successful adjustments increase and decrease total issuance > events for first issuance change 1`] = `
[
  {
    "data": {
      "new_": "(number)",
      "old": "(number)",
    },
    "method": "TotalIssuanceForced",
    "section": "balances",
  },
]
`;

exports[`Bifrost Kusama Accounts > \`force_adjust_total_issuance\` > successful adjustments increase and decrease total issuance > events for second issuance change 1`] = `
[
  {
    "data": {
      "new_": "(number)",
      "old": "(number)",
    },
    "method": "TotalIssuanceForced",
    "section": "balances",
  },
]
`;

exports[`Bifrost Kusama Accounts > \`force_transfer\` > force transferring origin below ED can kill it > events of \`force_transfer\` from Alice to Bob 1`] = `
[
  {
    "data": {
      "account": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "KilledAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
      "amount": "(rounded 3300000000)",
    },
    "method": "DustLost",
    "section": "balances",
  },
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "freeBalance": 10000000000,
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;

exports[`Bifrost Kusama Accounts > \`transfer_all\` > account with reserves cannot transfer all funds > events when Alice with reserve transfers all to Bob 1`] = `
[
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "freeBalance": "(rounded 920000000000)",
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;

exports[`Bifrost Kusama Accounts > \`transfer_all\` > transfer all with keepAlive false kills sender > events when Alice transfers all to Bob with \`keepAlive = false\` 1`] = `
[
  {
    "data": {
      "account": "1ZLR63GQkKph3XmxzziZ1RrPsL6CrJJ1izhgR1mzMaoHZJA",
    },
    "method": "KilledAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "freeBalance": "(rounded 920000000000)",
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;

exports[`Bifrost Kusama Accounts > \`transfer_all\` > transfer all with keepAlive true leaves 1 ED > events when Alice transfers all to Bob with \`keepAlive = true\` 1`] = `
[
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "freeBalance": "(rounded 910000000000)",
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;

exports[`Bifrost Kusama Accounts > currency tests > liquidity restriction error: funds locked via manual reserve and manual lock, triggered via multisig creation > liquidity restricted action events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x01000000",
          "index": 10,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 8000)",
          "refTime": "(rounded 400000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Bifrost Kusama Accounts > currency tests > liquidity restriction error: funds locked via manual reserve and manual lock, triggered via proxy addition > liquidity restricted action events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x01000000",
          "index": 10,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 5000)",
          "refTime": "(rounded 300000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Bifrost Kusama Accounts > currency tests > liquidity restriction error: funds locked via manual reserve and manual lock, triggered via referendum submission > liquidity restricted action events 1`] = `
[
  {
    "data": {
      "dispatchError": {
        "Module": {
          "error": "0x01000000",
          "index": 10,
        },
      },
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 100000)",
          "refTime": "(rounded 500000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Bifrost Kusama Accounts > currency tests > liquidity restriction error: funds locked via nomination pool and manual lock, triggered via multisig creation > liquidity restriction test skipped 1`] = `"Skipping test - required pallets not available: reserve=nomination pool"`;

exports[`Bifrost Kusama Accounts > currency tests > liquidity restriction error: funds locked via nomination pool and manual lock, triggered via proxy addition > liquidity restriction test skipped 1`] = `"Skipping test - required pallets not available: reserve=nomination pool"`;

exports[`Bifrost Kusama Accounts > currency tests > liquidity restriction error: funds locked via nomination pool and manual lock, triggered via referendum submission > liquidity restriction test skipped 1`] = `"Skipping test - required pallets not available: reserve=nomination pool"`;

exports[`Bifrost Kusama Accounts > currency tests > liquidity restriction error: funds locked via staking bond and manual lock, triggered via multisig creation > liquidity restriction test skipped 1`] = `"Skipping test - required pallets not available: reserve=staking bond"`;

exports[`Bifrost Kusama Accounts > currency tests > liquidity restriction error: funds locked via staking bond and manual lock, triggered via proxy addition > liquidity restriction test skipped 1`] = `"Skipping test - required pallets not available: reserve=staking bond"`;

exports[`Bifrost Kusama Accounts > currency tests > liquidity restriction error: funds locked via staking bond and manual lock, triggered via referendum submission > liquidity restriction test skipped 1`] = `"Skipping test - required pallets not available: reserve=staking bond"`;

exports[`Bifrost Kusama Accounts > transfer_allow_death > transfer of some funds does not kill sender account > events when Alice transfers 1 ED to Bob with sufficient balance 1`] = `
[
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "13Mbv5CRZeSZUqgN4fnS7bQ8XekARHe4kHaekM9mC3J4Fh7e",
      "freeBalance": 10000000000,
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;
